<resources>
    <string name="app_name">QuizTime</string>
    <string name="question_one">In the anime Dragonball Z, what is Vegetas son called?</string>
    <string name="q1_answer1">Gohan</string>
    <string name="q1_answer2">Trunks</string>
    <string name="q1_answer3">Goten</string>
    <string name="q1_answer4">Pan</string>

    <string name="question_two">Who is the captain of the Straw Hat Pirates (Full Name)</string>
    <string name="hint">The Anine is One Piece</string>
    <string name="q2_answer1">Monkey D Luffy</string>

    <string name="question_three">In the anime Bleach, What is the name of Ichigos zanpakuto?</string>
    <string name="q3_answer1">Engetsu</string>
    <string name="q3_answer2">Katen Kyokotsu</string>
    <string name="q3_answer3">Suzumebachi</string>
    <string name="q3_answer4">Zangetsu</string>

    <string name="question_four">Who was Ash Ketchums first Pokémon?</string>
    <string name="q4_answer1">Bulbasaur</string>
    <string name="q4_answer2">Charmander</string>
    <string name="q4_answer3">Pikachu</string>
    <string name="q4_answer4">Squirtle</string>

    <string name="question_five">What Millennium Item does Yugi have possession of in Yu-Gi-Oh?</string>
    <string name="q5_answer1">Millennium Rod</string>
    <string name="q5_answer2">Millennium Puzzle</string>
    <string name="q5_answer3">Millennium Necklace</string>
    <string name="q5_answer4">Millennium Eye</string>

    <string name="question_six">Jutsus in Naruto are divided into three categories, what are they?</string>
    <string name="q6_answer1">Ninjutsu, Ringjutsu, and Tyjutsu</string>
    <string name="q6_answer2">Genjutsu, Ninjutsu, and Taijutsu</string>
    <string name="q6_answer3">Redjutsu, Greenjutsu, and Bluejutsu</string>
    <string name="q6_answer4">Tenjutsu, Ninjutsu, and Gaijutsu</string>

    <string name="question_seven">Who is the Fullmetal Alchemist?</string>
    <string name="q7_answer1">Alphonse Elric</string>
    <string name="q7_answer2">Roy Mustang</string>
    <string name="q7_answer3">Edward Elric</string>
    <string name="q7_answer4">Winry Rockbell</string>

    <string name="submit_main">Submit</string>
    <string name="reset_button">Reset</string>
    <string name="zero">"You need to start watching Anime, Your score is "</string>
    <string name="one_two">"You need to watch some more Anime, Your score is "</string>
    <string name="three_four">"Not bad, Your score is "</string>
    <string name="five_six">"Nearly, Your score is "</string>
    <string name="full_score">"Easy wasn't they? Your score is "</string>

</resources>