<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/quiz_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/question_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/number_1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/question_one" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/question1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q1_answer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_answer1" />

                    <RadioButton
                        android:id="@+id/q1_answer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_answer2" />

                    <RadioButton
                        android:id="@+id/q1_answer3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_answer3" />

                    <RadioButton
                        android:id="@+id/q1_answer4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_answer4" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/question_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/number_2" />

                    <TextView
                        android:id="@+id/question2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/question_two" />

                </LinearLayout>

                <EditText
                    android:id="@+id/q2_answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/hint"
                    android:layout_marginLeft="35dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/question_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/number_3" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/question_three" />

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/question3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q3_answer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_answer1" />

                    <RadioButton
                        android:id="@+id/q3_answer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_answer2" />

                    <RadioButton
                        android:id="@+id/q3_answer3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_answer3" />

                    <RadioButton
                        android:id="@+id/q3_answer4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_answer4" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/question_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/number_4" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/question_four" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/question4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q4_answer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_answer1" />

                    <RadioButton
                        android:id="@+id/q4_answer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_answer2" />

                    <RadioButton
                        android:id="@+id/q4_answer3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_answer3" />

                    <RadioButton
                        android:id="@+id/q4_answer4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4_answer4" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/question_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/number_5" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/question_five" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/question5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q5_answer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_answer1" />

                    <RadioButton
                        android:id="@+id/q5_answer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_answer2" />

                    <RadioButton
                        android:id="@+id/q5_answer3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_answer3" />

                    <RadioButton
                        android:id="@+id/q5_answer4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q5_answer4" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/question_six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/number_6" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/question_six" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/question6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q6_answer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_answer1" />

                    <RadioButton
                        android:id="@+id/q6_answer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_answer2" />

                    <RadioButton
                        android:id="@+id/q6_answer3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_answer3" />

                    <RadioButton
                        android:id="@+id/q6_answer4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q6_answer4" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/question_seven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/number_7" />

                    <TextView
                        android:id="@+id/question7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/question_seven" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/q7_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:text="@string/q7_answer1"/>

                <CheckBox
                    android:id="@+id/q7_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:text="@string/q7_answer2"/>

                <CheckBox
                    android:id="@+id/q7_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:text="@string/q7_answer3"/>

                <CheckBox
                    android:id="@+id/q7_answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:text="@string/q7_answer4"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="11dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="finalScore"
                    android:text="@string/submit_main"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="reset"
                    android:text="@string/reset_button"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/score_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-condensed"
                android:text=""
                android:textColor="@android:color/black" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>